src/parser.output
Grammaire

    0 $accept: FILE $end

    1 FILE: DECLS TREES
    2     | TREES

    3 DECLS: DECLS DECL
    4      | DECL

    5 DECL: INST NAMES '=' ';'
    6     | INST INST NAMES '=' ';'

    7 NAMES: NAMES NAME
    8      | NAME

    9 TREES: TREES TREE
   10      | TREE

   11 TREE: TAG '[' ATTRIBUTS ']' '{' CONTENUS '}'
   12     | TAG '[' ATTRIBUTS ']' '/'
   13     | TAG '{' CONTENUS '}'
   14     | TAG '/'
   15     | '{' CONTENUS '}'

   16 ATTRIBUTS: ATTRIBUTS ATTRIBUT
   17          | ATTRIBUT

   18 ATTRIBUT: TAG '=' '"' TEXT '"'

   19 CONTENUS: CONTENUS CONTENU
   20         | CONTENU

   21 CONTENU: TREE
   22        | '"' TEXT '"'

   23 TEXT: TEXT WORD_T
   24     | WORD_T

   25 WORD_T: WORD ' '
   26       | WORD


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
' ' (32) 25
'"' (34) 18 22
'/' (47) 12 14
';' (59) 5 6
'=' (61) 5 6 18
'[' (91) 11 12
']' (93) 11 12
'{' (123) 11 13 15
'}' (125) 11 13 15
error (256)
TAG (258) 11 12 13 14 18
INST (259) 5 6
NAME (260) 7 8
WORD (261) 25 26


Non-terminaux, suivis des règles où ils apparaissent

$accept (16)
    à gauche: 0
FILE (17)
    à gauche: 1 2, à droite: 0
DECLS (18)
    à gauche: 3 4, à droite: 1 3
DECL (19)
    à gauche: 5 6, à droite: 3 4
NAMES (20)
    à gauche: 7 8, à droite: 5 6 7
TREES (21)
    à gauche: 9 10, à droite: 1 2 9
TREE (22)
    à gauche: 11 12 13 14 15, à droite: 9 10 21
ATTRIBUTS (23)
    à gauche: 16 17, à droite: 11 12 16
ATTRIBUT (24)
    à gauche: 18, à droite: 16 17
CONTENUS (25)
    à gauche: 19 20, à droite: 11 13 15 19
CONTENU (26)
    à gauche: 21 22, à droite: 19 20
TEXT (27)
    à gauche: 23 24, à droite: 18 22 23
WORD_T (28)
    à gauche: 25 26, à droite: 23 24


État 0

    0 $accept: . FILE $end

    TAG   décalage et aller à l'état 1
    INST  décalage et aller à l'état 2
    '{'   décalage et aller à l'état 3

    FILE   aller à l'état 4
    DECLS  aller à l'état 5
    DECL   aller à l'état 6
    TREES  aller à l'état 7
    TREE   aller à l'état 8


État 1

   11 TREE: TAG . '[' ATTRIBUTS ']' '{' CONTENUS '}'
   12     | TAG . '[' ATTRIBUTS ']' '/'
   13     | TAG . '{' CONTENUS '}'
   14     | TAG . '/'

    '['  décalage et aller à l'état 9
    '{'  décalage et aller à l'état 10
    '/'  décalage et aller à l'état 11


État 2

    5 DECL: INST . NAMES '=' ';'
    6     | INST . INST NAMES '=' ';'

    INST  décalage et aller à l'état 12
    NAME  décalage et aller à l'état 13

    NAMES  aller à l'état 14


État 3

   15 TREE: '{' . CONTENUS '}'

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3
    '"'  décalage et aller à l'état 15

    TREE      aller à l'état 16
    CONTENUS  aller à l'état 17
    CONTENU   aller à l'état 18


État 4

    0 $accept: FILE . $end

    $end  décalage et aller à l'état 19


État 5

    1 FILE: DECLS . TREES
    3 DECLS: DECLS . DECL

    TAG   décalage et aller à l'état 1
    INST  décalage et aller à l'état 2
    '{'   décalage et aller à l'état 3

    DECL   aller à l'état 20
    TREES  aller à l'état 21
    TREE   aller à l'état 8


État 6

    4 DECLS: DECL .

    $défaut  réduction par utilisation de la règle 4 (DECLS)


État 7

    2 FILE: TREES .
    9 TREES: TREES . TREE

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 2 (FILE)

    TREE  aller à l'état 22


État 8

   10 TREES: TREE .

    $défaut  réduction par utilisation de la règle 10 (TREES)


État 9

   11 TREE: TAG '[' . ATTRIBUTS ']' '{' CONTENUS '}'
   12     | TAG '[' . ATTRIBUTS ']' '/'

    TAG  décalage et aller à l'état 23

    ATTRIBUTS  aller à l'état 24
    ATTRIBUT   aller à l'état 25


État 10

   13 TREE: TAG '{' . CONTENUS '}'

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3
    '"'  décalage et aller à l'état 15

    TREE      aller à l'état 16
    CONTENUS  aller à l'état 26
    CONTENU   aller à l'état 18


État 11

   14 TREE: TAG '/' .

    $défaut  réduction par utilisation de la règle 14 (TREE)


État 12

    6 DECL: INST INST . NAMES '=' ';'

    NAME  décalage et aller à l'état 13

    NAMES  aller à l'état 27


État 13

    8 NAMES: NAME .

    $défaut  réduction par utilisation de la règle 8 (NAMES)


État 14

    5 DECL: INST NAMES . '=' ';'
    7 NAMES: NAMES . NAME

    NAME  décalage et aller à l'état 28
    '='   décalage et aller à l'état 29


État 15

   22 CONTENU: '"' . TEXT '"'

    WORD  décalage et aller à l'état 30

    TEXT    aller à l'état 31
    WORD_T  aller à l'état 32


État 16

   21 CONTENU: TREE .

    $défaut  réduction par utilisation de la règle 21 (CONTENU)


État 17

   15 TREE: '{' CONTENUS . '}'
   19 CONTENUS: CONTENUS . CONTENU

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3
    '}'  décalage et aller à l'état 33
    '"'  décalage et aller à l'état 15

    TREE     aller à l'état 16
    CONTENU  aller à l'état 34


État 18

   20 CONTENUS: CONTENU .

    $défaut  réduction par utilisation de la règle 20 (CONTENUS)


État 19

    0 $accept: FILE $end .

    $défaut  accepter


État 20

    3 DECLS: DECLS DECL .

    $défaut  réduction par utilisation de la règle 3 (DECLS)


État 21

    1 FILE: DECLS TREES .
    9 TREES: TREES . TREE

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3

    $défaut  réduction par utilisation de la règle 1 (FILE)

    TREE  aller à l'état 22


État 22

    9 TREES: TREES TREE .

    $défaut  réduction par utilisation de la règle 9 (TREES)


État 23

   18 ATTRIBUT: TAG . '=' '"' TEXT '"'

    '='  décalage et aller à l'état 35


État 24

   11 TREE: TAG '[' ATTRIBUTS . ']' '{' CONTENUS '}'
   12     | TAG '[' ATTRIBUTS . ']' '/'
   16 ATTRIBUTS: ATTRIBUTS . ATTRIBUT

    TAG  décalage et aller à l'état 23
    ']'  décalage et aller à l'état 36

    ATTRIBUT  aller à l'état 37


État 25

   17 ATTRIBUTS: ATTRIBUT .

    $défaut  réduction par utilisation de la règle 17 (ATTRIBUTS)


État 26

   13 TREE: TAG '{' CONTENUS . '}'
   19 CONTENUS: CONTENUS . CONTENU

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3
    '}'  décalage et aller à l'état 38
    '"'  décalage et aller à l'état 15

    TREE     aller à l'état 16
    CONTENU  aller à l'état 34


État 27

    6 DECL: INST INST NAMES . '=' ';'
    7 NAMES: NAMES . NAME

    NAME  décalage et aller à l'état 28
    '='   décalage et aller à l'état 39


État 28

    7 NAMES: NAMES NAME .

    $défaut  réduction par utilisation de la règle 7 (NAMES)


État 29

    5 DECL: INST NAMES '=' . ';'

    ';'  décalage et aller à l'état 40


État 30

   25 WORD_T: WORD . ' '
   26       | WORD .

    ' '  décalage et aller à l'état 41

    $défaut  réduction par utilisation de la règle 26 (WORD_T)


État 31

   22 CONTENU: '"' TEXT . '"'
   23 TEXT: TEXT . WORD_T

    WORD  décalage et aller à l'état 30
    '"'   décalage et aller à l'état 42

    WORD_T  aller à l'état 43


État 32

   24 TEXT: WORD_T .

    $défaut  réduction par utilisation de la règle 24 (TEXT)


État 33

   15 TREE: '{' CONTENUS '}' .

    $défaut  réduction par utilisation de la règle 15 (TREE)


État 34

   19 CONTENUS: CONTENUS CONTENU .

    $défaut  réduction par utilisation de la règle 19 (CONTENUS)


État 35

   18 ATTRIBUT: TAG '=' . '"' TEXT '"'

    '"'  décalage et aller à l'état 44


État 36

   11 TREE: TAG '[' ATTRIBUTS ']' . '{' CONTENUS '}'
   12     | TAG '[' ATTRIBUTS ']' . '/'

    '{'  décalage et aller à l'état 45
    '/'  décalage et aller à l'état 46


État 37

   16 ATTRIBUTS: ATTRIBUTS ATTRIBUT .

    $défaut  réduction par utilisation de la règle 16 (ATTRIBUTS)


État 38

   13 TREE: TAG '{' CONTENUS '}' .

    $défaut  réduction par utilisation de la règle 13 (TREE)


État 39

    6 DECL: INST INST NAMES '=' . ';'

    ';'  décalage et aller à l'état 47


État 40

    5 DECL: INST NAMES '=' ';' .

    $défaut  réduction par utilisation de la règle 5 (DECL)


État 41

   25 WORD_T: WORD ' ' .

    $défaut  réduction par utilisation de la règle 25 (WORD_T)


État 42

   22 CONTENU: '"' TEXT '"' .

    $défaut  réduction par utilisation de la règle 22 (CONTENU)


État 43

   23 TEXT: TEXT WORD_T .

    $défaut  réduction par utilisation de la règle 23 (TEXT)


État 44

   18 ATTRIBUT: TAG '=' '"' . TEXT '"'

    WORD  décalage et aller à l'état 30

    TEXT    aller à l'état 48
    WORD_T  aller à l'état 32


État 45

   11 TREE: TAG '[' ATTRIBUTS ']' '{' . CONTENUS '}'

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3
    '"'  décalage et aller à l'état 15

    TREE      aller à l'état 16
    CONTENUS  aller à l'état 49
    CONTENU   aller à l'état 18


État 46

   12 TREE: TAG '[' ATTRIBUTS ']' '/' .

    $défaut  réduction par utilisation de la règle 12 (TREE)


État 47

    6 DECL: INST INST NAMES '=' ';' .

    $défaut  réduction par utilisation de la règle 6 (DECL)


État 48

   18 ATTRIBUT: TAG '=' '"' TEXT . '"'
   23 TEXT: TEXT . WORD_T

    WORD  décalage et aller à l'état 30
    '"'   décalage et aller à l'état 50

    WORD_T  aller à l'état 43


État 49

   11 TREE: TAG '[' ATTRIBUTS ']' '{' CONTENUS . '}'
   19 CONTENUS: CONTENUS . CONTENU

    TAG  décalage et aller à l'état 1
    '{'  décalage et aller à l'état 3
    '}'  décalage et aller à l'état 51
    '"'  décalage et aller à l'état 15

    TREE     aller à l'état 16
    CONTENU  aller à l'état 34


État 50

   18 ATTRIBUT: TAG '=' '"' TEXT '"' .

    $défaut  réduction par utilisation de la règle 18 (ATTRIBUT)


État 51

   11 TREE: TAG '[' ATTRIBUTS ']' '{' CONTENUS '}' .

    $défaut  réduction par utilisation de la règle 11 (TREE)
